# esp32-websocket

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_idf.ps1  sdkconfig.defaults
main/: CMakeLists.txt  config_manager.cpp  config_manager.h  device_control.cpp  device_control.h  dns_server.cpp  dns_server.h  globals.h  http_server.cpp  http_server.h  i2c_expander.cpp  i2c_expander.h  idf_component.yml  led_control.cpp  led_control.h  main.cpp  voice_player.cpp  voice_player.h  websocket_client.cpp  websocket_client.h  wifi_manager.cpp  wifi_manager.h
